--- a/UITBuilding/UITBuilding.csproj
+++ b/UITBuilding/UITBuilding.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <AssemblyName>UITBuilding</AssemblyName>
+    <RootNamespace>UITBuilding</RootNamespace>
   </PropertyGroup>
 
 </Project>
